syntax = "proto3";

option csharp_namespace = "MeterReader.gRPC";

//https://protobuf.dev/reference/protobuf/google.protobuf/
//shawnl.ink/protobuf-wellknown
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service MeterReaderService {
	rpc AddReading (ReadingPackage) returns (StatusMessage);
	rpc AddReadingsStream (stream ReadingMessage) returns (google.protobuf.Empty);
}

//Repeated: 0 or more items of this.
message ReadingPackage {
	repeated ReadingMessage Readings = 1;
	ReadingStatus Successful = 2;
}

//Numbers means serialization order.
//Reserved: won't be handled the value (int or string in that case)
message ReadingMessage {
	int32 CustomerId = 1;
	int32 ReadingValue = 2;
	string Notes = 3;
	google.protobuf.Timestamp ReadingTime = 5;
	reserved 4;
	reserved 'Succesful';
}

message StatusMessage {
	ReadingStatus Success = 1;
	string Message = 2;
}

enum ReadingStatus {
	Unknow = 0;
	Success = 1;
	Failure = 2;
}